--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "fontawesome": "^5.6.3",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
