--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,42 @@
-node_modules
-.angular
-<<<<<<< HEAD
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
-=======
-/.angular
+# Compiled output
+/dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
+/node_modules
+npm-debug.log
+yarn-error.log
+
+# IDEs and editors
+.idea/
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# Visual Studio Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# Miscellaneous
 /.angular/cache
->>>>>>> 9dc2b3fcc4f56cb8f7f5c181d33368296c9ccedf
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
+
+# System files
+.DS_Store
+Thumbs.db
