--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@types/chart.js": "^2.9.37",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "fontawesome": "^5.6.3",
